Restore editable dungeon routes and drop 1.21.11 from the release
Making dungeon routes read-only went too far. The goal was to remove the
in-game route recorder, not the ability to tune a route after installing
it -- and with the recorder gone, read-only definitions left no way to
produce a dungeon route at all. installEditableRoutes had no production
callers left, so an imported route could only ever be re-exported
unchanged.

Every read-only guard is reverted to its main behavior: the downloader,
/wpd import, the in-game clipboard importer, and now /wp import all
install each secret path as an ordinary editable route again, and edit
mode, the route editor, /wp editing commands, add-waypoint, and route
deletion no longer refuse to touch a dungeon room.

The recorder itself stays removed: /wpd test, /wpd reset, /wpd room
create|rename|fingerprint add, and the /wpd waypoint subtree are still
gone, as are the Ender Pearl trajectories and the seven editor keybinds.

Release prep for 1.8.7:

  - mod_version 1.8.7.
  - Minecraft 1.21.11 is no longer built or published. The workflow drops
    the pinned-commit checkout, the Java 21 leg, and the third JAR; 1.8.6
    remains the last 1.21.11 release.
  - Draft release notes.